Fix application template

--- a/src/init/application/templates/index.html
+++ b/src/init/application/templates/index.html
@@ -9,6 +9,6 @@
     <link rel="import" href="/src/<%= elementName %>/<%= elementName %>.html">
   </head>
   <body>
-    <<%= name %>></<%= name %>>
+    <<%= elementName %>></<%= elementName %>>
   </body>
 </html>
