--- a/src/init/application/templates/test/_element/_element_test.html
+++ b/src/init/application/templates/test/_element/_element_test.html
@@ -22,7 +22,7 @@
       suite('<%= elementName %>', function() {
 
         test('instantiating the element works', function() {
-          var element = fixture('basic');
+          let element = fixture('basic');
           assert.equal(element.is, '<%= elementName %>');
         });
 
