Add demo and description for element template
Currently there is no demo reference in the element template.
Thus when creating a new element and serving it, there is no demo option, although the demo folder and demo template are created. It will be more consistent to include the demo refernce given that the demo template is provided.

--- a/src/init/element/templates/_element.html
+++ b/src/init/element/templates/_element.html
@@ -1,5 +1,11 @@
 <link rel="import" href="../polymer/polymer.html">
 
+<!--
+    <%= description %>
+    
+    @demo demo/index.html 
+-->
+
 <dom-module id="<%= name %>">
   <template>
     <style>
