Updated comment to include element name
Per @FredKSchott comment

--- a/src/init/element/templates/_element.html
+++ b/src/init/element/templates/_element.html
@@ -1,9 +1,10 @@
 <link rel="import" href="../polymer/polymer.html">
 
 <!--
-    <%= description %>
-    
-    @demo demo/index.html 
+`<%= name %>`
+<%= description %>
+
+@demo demo/index.html 
 -->
 
 <dom-module id="<%= name %>">
