Add demo and description for element template (#229)
* Add demo and description for element template

Currently there is no demo reference in the element template.
Thus when creating a new element and serving it, there is no demo option, although the demo folder and demo template are created. It will be more consistent to include the demo refernce given that the demo template is provided.

* Updated comment to include element name

Per @FredKSchott comment

--- a/src/init/element/templates/_element.html
+++ b/src/init/element/templates/_element.html
@@ -1,5 +1,12 @@
 <link rel="import" href="../polymer/polymer.html">
 
+<!--
+`<%= name %>`
+<%= description %>
+
+@demo demo/index.html 
+-->
+
 <dom-module id="<%= name %>">
   <template>
     <style>
