--- a/src/init/element/templates/test/_element_test.html
+++ b/src/init/element/templates/test/_element_test.html
@@ -22,7 +22,7 @@
       suite('<%= name %>', function() {
 
         test('instantiating the element works', function() {
-          let element = fixture('basic');
+          var element = fixture('basic');
           assert.equal(element.is, '<%= name %>');
         });
 
