Application index.html closer to PSK index.html

--- a/src/init/application/templates/index.html
+++ b/src/init/application/templates/index.html
@@ -1,11 +1,17 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
+
     <title><%= name %></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="<%= name %> description">
+
+    <!-- See https://goo.gl/OOhYW5 -->
     <link rel="manifest" href="/manifest.json">
+
     <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+
     <link rel="import" href="/src/<%= elementName %>/<%= elementName %>.html">
   </head>
   <body>
