Element index.html closer to PolymerElements index.html

--- a/src/init/element/templates/index.html
+++ b/src/init/element/templates/index.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
+
     <title><%= name %></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <script src="../webcomponentsjs/webcomponents-lite.js"></script>
+
     <link rel="import" href="../iron-component-page/iron-component-page.html">
   </head>
   <body>
