--- a/src/init/application/templates/test/_element/_element_test.html
+++ b/src/init/application/templates/test/_element/_element_test.html
@@ -1,16 +1,17 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
+
     <title><%= elementName %> test</title>
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
+
     <script src="../../../webcomponentsjs/webcomponents-lite.js"></script>
     <script src="../../../web-component-tester/browser.js"></script>
 
     <link rel="import" href="../../src/<%= elementName %>/<%= elementName %>.html">
   </head>
   <body>
-
     <test-fixture id="basic">
       <template>
         <<%= elementName %>></<%= elementName %>>
@@ -19,12 +20,10 @@
 
     <script>
       suite('<%= elementName %>', function() {
-
         test('instantiating the element works', function() {
           var element = fixture('basic');
           assert.equal(element.is, '<%= elementName %>');
         });
-
       });
     </script>
   </body>
