make sure the template builds and works with no other configuration [#453]

--- a/src/init/element/templates/index.html
+++ b/src/init/element/templates/index.html
@@ -6,9 +6,9 @@
 
     <title><%= name %></title>
 
-    <script src="../webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
-    <link rel="import" href="../iron-component-page/iron-component-page.html">
+    <link rel="import" href="bower_components/iron-component-page/iron-component-page.html">
   </head>
   <body>
     <iron-component-page src="<%= name %>.html"></iron-component-page>
