--- a/src/init/element/templates/demo/index.html
+++ b/src/init/element/templates/demo/index.html
@@ -6,10 +6,10 @@
 
     <title><%= name %> demo</title>
 
-    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
-    <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
-    <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
+    <link rel="import" href="../bower_components/iron-demo-helpers/demo-pages-shared-styles.html">
+    <link rel="import" href="../bower_components/iron-demo-helpers/demo-snippet.html">
     <link rel="import" href="../<%= name %>.html">
 
     <style is="custom-style" include="demo-pages-shared-styles">
