--- a/src/init/element/templates/test/_element_test.html
+++ b/src/init/element/templates/test/_element_test.html
@@ -6,8 +6,8 @@
 
     <title><%= name %> test</title>
 
-    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-    <script src="../../web-component-tester/browser.js"></script>
+    <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="../bower_components/web-component-tester/browser.js"></script>
 
     <link rel="import" href="../<%= name %>.html">
   </head>
