--- a/src/init/application/templates/polymer-2.x/test/_element/_element_test.html
+++ b/src/init/application/templates/polymer-2.x/test/_element/_element_test.html
@@ -22,7 +22,9 @@
       suite('<%= elementName %>', function() {
         test('instantiating the element works', function() {
           var element = fixture('basic');
-          assert.equal(element.is, '<%= elementName %>');
+          var elementClass = window.customElements.get('<%= elementName %>');
+          assert.isOk(elementClass);
+          assert.isTrue(element instanceof elementClass);
         });
       });
     </script>
