--- a/src/init/element/templates/polymer-2.x/test/_element_test.html
+++ b/src/init/element/templates/polymer-2.x/test/_element_test.html
@@ -22,7 +22,9 @@
       suite('<%= name %>', function() {
         test('instantiating the element works', function() {
           var element = fixture('basic');
-          assert.equal(element.is, '<%= name %>');
+          var elementClass = window.customElements.get('<%= name %>');
+          assert.isOk(elementClass);
+          assert.isTrue(element instanceof elementClass);
         });
       });
     </script>
