Switch polymer-2.x templates to use polymer-element.html.
These templates create class based elements that extends
Polymer.Element.  Importing the full polymer.html is not needed.

Add commented out imports for dom-if and dom-repeat to remind users they
are not included by polymer-element.html.

--- a/src/init/application/templates/polymer-2.x/src/_element/_element.html
+++ b/src/init/application/templates/polymer-2.x/src/_element/_element.html
@@ -1,4 +1,6 @@
-<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer-element.html">
+<!--<link rel="import" href="../polymer/lib/elements/dom-if.html">-->
+<!--<link rel="import" href="../polymer/lib/elements/dom-repeat.html">-->
 
 <dom-module id="<%= elementName %>">
   <template>
@@ -11,6 +13,7 @@
   </template>
 
   <script>
+    /** @polymerElement */
     class MyApplication extends Polymer.Element {
       static get is() { return '<%= elementName %>'; }
       static get properties() {
