--- a/src/init/element/templates/polymer-2.x/_element.html
+++ b/src/init/element/templates/polymer-2.x/_element.html
@@ -1,4 +1,6 @@
-<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../polymer/polymer-element.html">
+<!--<link rel="import" href="../polymer/lib/elements/dom-if.html">-->
+<!--<link rel="import" href="../polymer/lib/elements/dom-repeat.html">-->
 
 <!--
 `<%= name %>`
@@ -18,6 +20,7 @@
   </template>
 
   <script>
+    /** @polymerElement */
     class MyElement extends Polymer.Element {
       static get is() { return '<%= name %>'; }
       static get properties() {
