--- a/src/init/application/templates/polymer-2.x/src/_element/_element.html
+++ b/src/init/application/templates/polymer-2.x/src/_element/_element.html
@@ -11,7 +11,7 @@
   </template>
 
   <script>
-    class MyApplication extends Polymer.Element {
+    class <%= elementClassName %> extends Polymer.Element {
       static get is() { return '<%= elementName %>'; }
       static get properties() {
         return {
