--- a/src/init/element/templates/polymer-2.x/_element.html
+++ b/src/init/element/templates/polymer-2.x/_element.html
@@ -18,7 +18,7 @@
   </template>
 
   <script>
-    class MyElement extends Polymer.Element {
+    class <%= name %> extends Polymer.Element {
       static get is() { return '<%= name %>'; }
       static get properties() {
         return {
