fix bad issue in init template registration

--- a/src/init/application/templates/polymer-2.x/src/_element/_element.html
+++ b/src/init/application/templates/polymer-2.x/src/_element/_element.html
@@ -23,6 +23,6 @@
       }
     }
 
-    window.customElements.define(MyApplication.is, MyApplication);
+    window.customElements.define(<%= elementClassName %>.is, <%= elementClassName %>);
   </script>
 </dom-module>
