create UpperCamelCase class name from element name (#651)
* create UpperCamelCase class name from element name

* Update _element.html

* update tests and types

* final regex

* fix bad issue in init template registration

--- a/src/init/application/templates/polymer-2.x/src/_element/_element.html
+++ b/src/init/application/templates/polymer-2.x/src/_element/_element.html
@@ -11,7 +11,7 @@
   </template>
 
   <script>
-    class MyApplication extends Polymer.Element {
+    class <%= elementClassName %> extends Polymer.Element {
       static get is() { return '<%= elementName %>'; }
       static get properties() {
         return {
@@ -23,6 +23,6 @@
       }
     }
 
-    window.customElements.define(MyApplication.is, MyApplication);
+    window.customElements.define(<%= elementClassName %>.is, <%= elementClassName %>);
   </script>
 </dom-module>
