--- a/src/init/application/templates/polymer-2.x/src/_element/_element.html
+++ b/src/init/application/templates/polymer-2.x/src/_element/_element.html
@@ -1,6 +1,4 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
-<!--<link rel="import" href="../../bower_components/polymer/lib/elements/dom-if.html">-->
-<!--<link rel="import" href="../../bower_components/polymer/lib/elements/dom-repeat.html">-->
 
 <dom-module id="<%= elementName %>">
   <template>
@@ -13,7 +11,10 @@
   </template>
 
   <script>
-    /** @polymerElement */
+    /**
+     * @customElement
+     * @polymer
+     */
     class <%= elementClassName %> extends Polymer.Element {
       static get is() { return '<%= elementName %>'; }
       static get properties() {
