--- a/src/init/element/templates/polymer-2.x/test/_element_test.html
+++ b/src/init/element/templates/polymer-2.x/test/_element_test.html
@@ -26,22 +26,22 @@
     </test-fixture>
 
     <script>
-      suite('<%= name %>', function() {
+      suite('<%= name %>', () => {
 
-        test('instantiating the element with default properties works', function() {
-          var element = fixture('BasicTestFixture');
+        test('instantiating the element with default properties works', () => {
+          const element = fixture('BasicTestFixture');
           assert.equal(element.prop1, '<%= name %>');
-          var elementShadowRoot = element.shadowRoot;
-          var elementHeader = elementShadowRoot.querySelector('h2');
+          const elementShadowRoot = element.shadowRoot;
+          const elementHeader = elementShadowRoot.querySelector('h2');
           assert.equal(elementHeader.innerHTML, 'Hello <%= name %>!');
         });
 
-        test('setting a property on the element works', function() {
+        test('setting a property on the element works', () => {
           // Create a test fixture
-          var element = fixture('ChangedPropertyTestFixture');
+          const element = fixture('ChangedPropertyTestFixture');
           assert.equal(element.prop1, 'new-prop1');
-          var elementShadowRoot = element.shadowRoot;
-          var elementHeader = elementShadowRoot.querySelector('h2');
+          const elementShadowRoot = element.shadowRoot;
+          const elementHeader = elementShadowRoot.querySelector('h2');
           assert.equal(elementHeader.innerHTML, 'Hello new-prop1!');
         });
 
