Fix redirect url

--- a/src/init/element/templates/polymer-2.x/index.html
+++ b/src/init/element/templates/polymer-2.x/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0;url=demo/" />
+    <meta http-equiv="refresh" content="0;url=components/<%= name %>/demo/" />
     <title><%= name %></title>
   </head>
   <body>
